--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-responsive-carousel": "^3.2.11",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^2.1.3",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
