--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "firebase": "^9.6.5",
+    "firebase-cli": "^1.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-firebase-hooks": "^5.0.0",
     "react-responsive-carousel": "^3.2.11",
     "react-scripts": "^2.1.3",
     "typescript": "^4.1.3",
