--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -51,6 +51,6 @@ jobs:
       with:
         args: deploy --only hosting
       env:
-        FIREBASE_TOKEN: ${{ secrets.FIREBASE:TOKEN }}
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
     
       
