--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "firebase": "^9.6.5",
     "firebase-cli": "^1.2.0",
+    "fsevents": "^2.3.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-firebase-hooks": "^5.0.0",
