--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -21,6 +21,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Prettify code
+      uses: creyD/prettier_action@v4.2
+      with:
+        # This part is also where you can pass other options, for example:
+        prettier_options: --check **/*.{js,ts,jsx,tsx}
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
