--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.3.1",
     "react-responsive-carousel": "^3.2.11",
     "react-scripts": "^2.1.3",
+    "recoil": "^0.6.1",
     "typescript": "^4.5.5",
     "web-vitals": "^0.2.4"
   },
