--- a/package.json
+++ b/package.json
@@ -6,25 +6,24 @@
     "@chakra-ui/react": "^1.8.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.6.0",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^14.18.12",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^16.11.26",
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
     "firebase": "^9.6.5",
     "firebase-cli": "^1.2.0",
     "framer-motion": "^4.1.17",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-firebase-hooks": "^5.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-responsive-carousel": "^3.2.11",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "5.0.0",
     "recoil": "^0.6.1",
-    "typescript": "^4.5.5",
-    "web-vitals": "^0.2.4"
+    "typescript": "^4.6.2",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
