--- a/.gitignore
+++ b/.gitignore
@@ -22,23 +22,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
-
-# Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-.idea/**/dbnavigator.xml
-
-# mpeltonen/sbt-idea plugin
-.idea_modules/
-/.idea/.gitignore
-/.idea/prettier.xml
+#Ignore all .idea files
+/.idea/
