--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^9.6.5",
     "firebase-cli": "^1.2.0",
     "framer-motion": "^4.1.17",
+    "qrcode.react": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
