--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "framer-motion": "^4.1.17",
     "qrcode.react": "^3.0.1",
     "react": "^17.0.2",
+    "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-responsive-carousel": "^3.2.11",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-use": "^17.3.2",
     "recoil": "^0.6.1",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
